first-ws/log/build_2024-08-20_09-13-45/my_py_pkg/stderr.log
  File "/ws/install/my_py_pkg/lib/python3.10/site-packages/my_py_pkg/battery_node.py", line 50
    		elif slef.battery_level =< 95:
    		                        ^
SyntaxError: invalid syntax

